applications/crafty/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty-ingress
  namespace: crafty
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crafty0213.kro.kr`)
      kind: Rule
      services:
        - name: crafty-https
          port: 8443
          scheme: https
          serversTransport: crafty-insecure
  tls:
    secretName: crafty-tls
